-------------------------------------------------------------------
Thu Oct 23 12:04:17 UTC 2014 - jsrain@suse.cz

- added QT-specific dialog for displaying release notes

-------------------------------------------------------------------
Wed Aug 13 15:23:20 UTC 2014 - mvidner@suse.com

- Fixed Table(:multiSelection) selecting 1st item when focused
  (bnc#888090).
- 2.46.13

-------------------------------------------------------------------
Tue Jul  8 12:57:48 UTC 2014 - mvidner@suse.com

- Avoid QXcbEventReader crash during library shutdown (bnc#879295).
- 2.46.12

-------------------------------------------------------------------
Thu May 29 09:15:17 UTC 2014 - mvidner@suse.com

- Fix recent ugly fonts in cs_CZ, hu_HU (bnc#879991).
- 2.46.11

-------------------------------------------------------------------
Wed May 21 08:21:09 CEST 2014 - snwint@suse.de

- fix last font selection fix (bnc #878859)
- 2.46.10

-------------------------------------------------------------------
Mon May 19 15:57:00 CEST 2014 - snwint@suse.de

- load per-language font info and refresh widget fonts (bnc #866705)
- 2.46.9

-------------------------------------------------------------------
Wed May  7 07:57:07 UTC 2014 - jsrain@suse.cz

- avoid hiding "Show Relnotes" button when new Wizard window is
  created (bnc#876668)
- 2.46.8

-------------------------------------------------------------------
Thu Apr 17 07:13:17 UTC 2014 - jsrain@suse.cz

- added title bar with product logo (bnc#868722)
- 2.46.7

-------------------------------------------------------------------
Mon Apr 14 15:11:09 CEST 2014 - tgoettlicher@suse.de

- Improve styleability of dialog heading
- 2.46.6

-------------------------------------------------------------------
Tue Apr  8 13:17:38 UTC 2014 - mvidner@suse.com

- Enable wizard title on the left instead of on top (bnc#868859).
- 2.46.5

-------------------------------------------------------------------
Mon Mar 31 14:31:28 CEST 2014 - tgoettlicher@suse.de
